--- a/src/Components/Invoice/Invoice.css
+++ b/src/Components/Invoice/Invoice.css
@@ -1,7 +1,7 @@
 .invoice-border {
-  height: 5px;
+  height: 10px;
   width: 100%;
-  background-image: linear-gradient(#4e79ff, #a78dff);
+  background-image: linear-gradient(45deg, #4e79ff, #a78dff);
   position: absolute;
   top: 0;
   left: 0;
