--- a/src/Global.css
+++ b/src/Global.css
@@ -11,7 +11,7 @@ h2 {
 h3 {
   font-size: 14px;
   font-weight: 600;
-  line-height: 180%;
+  line-height: 120%;
 }
 
 h4 {
@@ -25,7 +25,7 @@ h4 {
 }
 
 button {
-  padding: 12px;
+  padding: 5px 10px;
   border-radius: 7px;
   font-weight: 800;
   font-size: 14px;
